Simplified responsiveness of PageableTable so that first column is no longer pinned and therefore doesn't create additional elements on the page that sometimes don't work when viewed on iPad.  Now the table is simply scrollable from left to right when viewed on smaller device screens.

--- a/src/css/pageable.css
+++ b/src/css/pageable.css
@@ -54,15 +54,11 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .responsive {position: relative;}
+    .table-wrapper {
+        position: relative;
+        overflow: scroll;
+        overflow-y: hidden;
+    }
 
-    .pinned { position: absolute; left: 0; top: 0; width: 20%; overflow: hidden; overflow-x: scroll; background: #fff;}
-    .pinned table { width: 100%; }
-    .pinned table th, .pinned table td { white-space: nowrap; }
-
-    .scrollable { margin-left: 20%; }
-    .scrollable { overflow: scroll; overflow-y: hidden; }
-    .scrollable table th:first-child, .scrollable table td:first-child {display: none;}
-
-    .responsive table td, .responsive table th { position: relative; white-space: nowrap; overflow: hidden; }
+    .table-wrapper table td, .table-wrapper table th { position: relative; white-space: nowrap; overflow: hidden; }
 }
